--- a/index.html
+++ b/index.html
@@ -1,105 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Interactif - Julien GIL</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
+      integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+  </head>
+  <body>
     <div class="container p-0" id="bg-color">
-        <!-- Header -->
-        <header class="g-0 row">
-            <div class="d-flex justify-content-start align-items-center" id="top-banner">
-                <div id="pfp-container" class="my-3 mx-5">
-                    <img src="assets/imgs/pfp.png" alt="photo de profil" id="pfp" class="rounded-circle">
-                </div>
-                <div class="flex-column m-3 align-self-center" id="header-title">
-                    <div id="name">
-                        <h1 class="fs-2">Julien GIL</h1>
-                    </div>
-                    <div class="catchphrase fs-6 fst-italic">
-                        <p>Un développeur de qualité, pas comme son CV</p>
-                    </div>
-                </div>
-                <div class="ms-auto px-5 bd-highlight">
-                    <a href="assets/downloads/CV_Julien_GIL.pdf" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-download fs-2 m-5" id="dl-button"></i></a>
-                </div>
+      <!-- Header -->
+      <header class="g-0 row">
+        <div
+          class="d-flex justify-content-start align-items-center"
+          id="top-banner"
+        >
+          <div id="pfp-container" class="my-3 mx-5">
+            <img
+              src="assets/imgs/pfp.png"
+              alt="photo de profil"
+              id="pfp"
+              class="rounded-circle"
+            />
+          </div>
+          <div class="flex-column m-3 align-self-center" id="header-title">
+            <div id="name">
+              <h1 class="fs-2">Julien GIL</h1>
             </div>
-        </header>
+            <div class="catchphrase fs-6 fst-italic">
+              <p>Un développeur de qualité, pas comme son CV</p>
+            </div>
+          </div>
+          <div class="ms-auto px-5 bd-highlight">
+            <a
+              href="assets/downloads/CV_Julien_GIL.pdf"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-solid fa-download fs-2 m-5" id="dl-button"></i
+            ></a>
+          </div>
+        </div>
+      </header>
 
-        <!-- Main Content -->
-        <main class="pb-5">
-            <!-- About Section -->
-            <section id="about" class="mx-5 px-5">
-                <h3>À propos</h3>
-                <p class="container mt-3 fst-italic">
-                    Developpeur back-end consciencieux, j'ai plus de 5 ans d'experience dans des domaines divers. 
-                    <br>J'aime découvrir de nouvelles technologies et j'ai la réelle volonté d'apporter du sens dans mon métier.
-                    Aussi travailler pour une entreprise à vocation sociale, humanitaire ou environnementale serait pour moi une véritable plus-value.
-                    Ayant récemment développé une appétance pour le mobile, je me suis tourné vers l'apprentissage de Flutter en autodidacte.
-                </p>
-            </section>
+      <!-- Main Content -->
+      <main class="pb-5">
+        <!-- About Section -->
+        <section id="about" class="mx-5 px-5">
+          <h3>À propos</h3>
+          <p class="container mt-3 fst-italic">
+            Developpeur back-end consciencieux, j'ai plus de 5 ans d'experience
+            dans des domaines divers.
+            <br />J'aime découvrir de nouvelles technologies et j'ai la réelle
+            volonté d'apporter du sens dans mon métier. Aussi travailler pour
+            une entreprise à vocation sociale, humanitaire ou environnementale
+            serait pour moi une véritable plus-value. Ayant récemment développé
+            une appétance pour le mobile, je me suis tourné vers l'apprentissage
+            de Flutter en autodidacte.
+          </p>
+        </section>
 
-            <hr class="hr1" />
+        <hr class="hr1" />
 
-            <!-- Skills Section -->
-            <section id="skills" class="mx-5 px-5">
-                <h3>Compétences</h3>
-                <ul class="mt-3">
-                    <li>Développement Back-end (Java, Node.js, RxJs, C#, PHP)</li>
-                    <li>Développement Front-end (HTML5, CSS3, JavaScript, Bootstrap)</li>
-                    <li>Base de données (MySQL, MongoDB, PostgreSQL)</li>
-                    <li>Développement mobile (Flutter, Android, Swift)</li>
-                </ul>
-            </section>
+        <!-- Skills Section -->
+        <section id="skills" class="mx-5 px-5">
+          <h3>Compétences</h3>
+          <ul class="mt-3">
+            <li>Développement Back-end (Java, Node.js, RxJs, C#, PHP)</li>
+            <li>
+              Développement Front-end (HTML5, CSS3, JavaScript, Bootstrap)
+            </li>
+            <li>Base de données (MySQL, MongoDB, PostgreSQL)</li>
+            <li>Développement mobile (Flutter, Android, Swift)</li>
+          </ul>
+        </section>
 
-            <hr class="hr1" />
+        <hr class="hr1" />
 
-            <!-- Experience Section -->
-            <section id="experience" class="mx-5 px-5">
-                <h3>Expérience</h3>
-                <ul class="mt-3">
-                    <li>SDK Automation Engineer - Madbox (2020 - 2022)</li>
-                    <li>R&D Engineer - fifty-five (2016 - 2019)</li>
-                    <li>Stagiaire Full-stack - Novactive (2014)</li>
-                </ul>
-            </section>
+        <!-- Experience Section -->
+        <section id="experience" class="mx-5 px-5">
+          <h3>Expérience</h3>
+          <ul class="mt-3">
+            <li>SDK Automation Engineer - Madbox (2020 - 2022)</li>
+            <li>R&D Engineer - fifty-five (2016 - 2019)</li>
+            <li>Stagiaire Full-stack - Novactive (2014)</li>
+          </ul>
+        </section>
 
-            <hr class="hr1" />
+        <hr class="hr1" />
 
-            <!-- Contact Section -->
-            <section id="contact" class="mx-5 px-5">
-                <h3>Contact</h3>
-                <form id="contact-form" class="mt-3 form-floating">
-                    <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="floatingName" placeholder="Jean Dupont">
-                        <label for="floatingName" id="nameLabel">Name</label>
-                    </div>
-                    <span id="error-floatingName"></span>
-                    <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="floatingMail" placeholder="name@example.com">
-                        <label for="floatingMail" id="mailLabel">Email address</label>
-                    </div>
-                    <span id="error-floatingMail"></span>
-                    <div class="form-floating mb-3">
-                        <input type="textarea" class="form-control" id="floatingMessage" placeholder="Votre texte ici..." rows="5">
-                        <label for="floatingMessage" id="messageLabel">Message</label>
-                    </div>
-                    <span id="error-floatingMessage"></span>
-                    <div class="d-flex justify-content-end">
-                        <button type="submit" class="btn btn-primary px-5">Envoyer</button>
-                    </div>
-                </form>
-                <div id="form-feedback" class="mb-3"></div>
-            </section>
-        </main>
+        <!-- Contact Section -->
+        <section id="contact" class="mx-5 px-5">
+          <h3>Contact</h3>
+          <form id="contact-form" class="mt-3 form-floating">
+            <div class="form-floating mb-3">
+              <input
+                type="text"
+                class="form-control"
+                id="floatingName"
+                placeholder="Jean Dupont"
+              />
+              <label for="floatingName" id="nameLabel">Prenom</label>
+            </div>
+            <span id="error-floatingName"></span>
+            <div class="form-floating mb-3">
+              <input
+                type="email"
+                class="form-control"
+                id="floatingMail"
+                placeholder="name@example.com"
+              />
+              <label for="floatingMail" id="mailLabel">Adresse Email</label>
+            </div>
+            <span id="error-floatingMail"></span>
+            <div class="form-floating mb-3">
+              <input
+                type="textarea"
+                class="form-control"
+                id="floatingMessage"
+                placeholder="Votre texte ici..."
+                rows="5"
+              />
+              <label for="floatingMessage" id="messageLabel">Message</label>
+            </div>
+            <span id="error-floatingMessage"></span>
+            <div class="d-flex justify-content-end">
+              <button type="submit" class="btn btn-primary px-5">
+                Envoyer
+              </button>
+            </div>
+          </form>
+          <div id="form-feedback" class="mb-3"></div>
+        </section>
+
+        <!-- The Modal -->
+        <div id="myModal">
+          <!-- Modal content -->
+          <div class="modal-content d-flex">
+            <span class="close align-self-end">x</span>
+            <h4 id="thanks-message"></h4>
+            <p>
+              Votre message a bien été reçu et sera traité dans les plus brefs
+              délais.
+            </p>
+          </div>
+        </div>
+      </main>
     </div>
 
     <!-- JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
-</body>
+  </body>
 </html>
