--- a/index.html
+++ b/index.html
@@ -123,15 +123,15 @@
             </div>
             <span id="error-floatingMail"></span>
             <div class="form-floating mb-3">
-              <input
-                type="textarea"
+              <textarea
                 class="form-control"
+                placeholder="Leave a comment here"
                 id="floatingMessage"
-                placeholder="Votre texte ici..."
-                rows="5"
-              />
+                style="height: 150px"
+              ></textarea>
               <label for="floatingMessage" id="messageLabel">Message</label>
             </div>
+
             <span id="error-floatingMessage"></span>
             <div class="d-flex justify-content-end">
               <button type="submit" class="btn btn-primary px-5">
